--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,27 @@
 {
+  "id": "mixapp",
   "name": "Ingredience & porce",
   "short_name": "MixApp",
-  "start_url": "./",
+  "description": "PWA pro výpočet ingrediencí a porcí v režimech Recept/Směs.",
+  "start_url": "/?source=pwa",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#0bbf55",
+  "lang": "cs",
+  "dir": "ltr",
   "icons": [
-    { "src": "icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "icon-512.png", "sizes": "512x512", "type": "image/png" }
+    {
+      "src": "/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    }
   ]
 }
